2 January 2012: Wouter
	- Fix to randomize hash function, based on 28c3 congress, reported
	  by Peter van Dijk.

24 December 2011: Wouter
	- Fix for memory leak (about 20 bytes when a tcp or udp send operation
	  towards authority servers failed, takes about 50.000 such failures to
	  leak one Mb, such failures are also usually logged), reported by
	  Robert Fleischmann.
	- iana portlist updated.

19 December 2011: Wouter
	- Fix for VU#209659 CVE-2011-4528: Unbound denial of service
	  vulnerabilities from nonstandard redirection and denial of existence
	  http://www.unbound.net/downloads/CVE-2011-4528.txt
	- robust checks for next-closer NSEC3s.
	- tag 1.4.14 created.
	- trunk has 1.4.15 in development.

15 December 2011: Wouter
	- remove uninit warning from cachedump code.
	- Fix parse error on negative SOA RRSIGs if badly ordered in the packet.

13 December 2011: Wouter
	- iana portlist updated.
	- svn tag 1.4.14rc1
	- fix infra cache comparison.
	- Fix to constrain signer_name to be a parent of the lookupname.

5 December 2011: Wouter
	- Fix getaddrinfowithincludes on windows with fedora16 mingw32-gcc.
	- Fix warnings with gcc 4.6 in compat/inet_ntop.c.
	- Fix warning unused in compat/strptime.c.
	- Fix malloc detection and double defintion.

2 December 2011: Wouter
	- configure generated with autoconf 2.68.

30 November 2011: Wouter
	- Fix for tcp-upstream and ssl-upstream for if a laptop sleeps, causes
	  SERVFAILs.  Also fixed for UDP (but less likely).

28 November 2011: Wouter
	- Fix quartile time estimate, it was too low, (thanks Jan Komissar).
	- iana ports updated.

11 November 2011: Wouter
	- Makefile compat with SunOS make, BSD make and GNU make.
	- iana ports updated.

10 November 2011: Wouter
	- Makefile changed for BSD make compatibility.

9 November 2011: Wouter
	- added unit test for SSL service and SSL-upstream.

8 November 2011: Wouter
	- can configure ssl service to one port number, and not on others.