@@ -1978,14 +1978,14 @@ processFinished(struct module_qstate* qstate, struct val_qstate* vq,
 	/* store results in cache */
 	if(qstate->query_flags&BIT_RD) {
 		if(!dns_cache_store(qstate->env, &vq->orig_msg->qinfo, 
-			vq->orig_msg->rep, 0, qstate->prefetch_leeway)) {
+			vq->orig_msg->rep, 0, qstate->prefetch_leeway, NULL)) {
 			log_err("out of memory caching validator results");
 		}
 	} else {
 		/* for a referral, store the verified RRsets */
 		/* and this does not get prefetched, so no leeway */
 		if(!dns_cache_store(qstate->env, &vq->orig_msg->qinfo, 
-			vq->orig_msg->rep, 1, 0)) {
+			vq->orig_msg->rep, 1, 0, NULL)) {
 			log_err("out of memory caching validator results");
 		}
 	}
